[gd_scene load_steps=8 format=2]

[ext_resource path="res://casas/casinha1.tscn" type="PackedScene" id=1]
[ext_resource path="res://world.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUB.gd" type="Script" id=3]
[ext_resource path="res://casas/casinha2.tscn" type="PackedScene" id=4]
[ext_resource path="res://casas/casinha3.tscn" type="PackedScene" id=5]
[ext_resource path="res://casas/casinha4.tscn" type="PackedScene" id=6]
[ext_resource path="res://casas/casinha5.tscn" type="PackedScene" id=7]

[node name="HUB" type="Node2D"]
script = ExtResource( 3 )

[node name="world" parent="." instance=ExtResource( 2 )]

[node name="casinha1" parent="." instance=ExtResource( 1 )]
pause_mode = 1
physics_interpolation_mode = 1
position = Vector2( 661, 108 )

[node name="casinha2" parent="." instance=ExtResource( 4 )]
pause_mode = 1
position = Vector2( 5, -353 )

[node name="casinha3" parent="." instance=ExtResource( 5 )]
pause_mode = 1
position = Vector2( 0, 297 )

[node name="casinha4" parent="." instance=ExtResource( 6 )]
position = Vector2( 333, -353 )

[node name="casinha5" parent="." instance=ExtResource( 7 )]
position = Vector2( 345, 298 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 654, 544 )

[node name="Position2D2" type="Position2D" parent="."]
pause_mode = 2
position = Vector2( 696, 127 )
